--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   
-  <header>
+  <header class='header'>
     <div class="intro">
       <div class="heading">
         <p class="head1">Reliable, efficient delivery</p>
@@ -23,7 +23,7 @@
         to ensure that your project is successful</p>
     </div>  
   </header>
-  <main>
+  <main class='main'>
     <div class="colum1">
       <div class="supervisor">
         <h2>Supervisor</h2>
@@ -52,7 +52,7 @@
       </div>
     </div>    
   </main>
-  <footer>
+  <footer class='footer'>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Ameenshaskithadiyil</a>.
